crates/tome-term/src/snapshots/tome__tests__insert_newline_single_cursor.snap
---
source: crates/tome-term/src/main.rs
assertion_line: 1043
expression: terminal.backend()
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
" INSERT  test.txt [+]  1:2                                                      "
"                                                                                "
