crates/tome-term/src/snapshots/tome__tests__render_after_typing.snap
---
source: crates/tome-term/src/main.rs
expression: terminal.backend()
---
"  1 abc                                                                         "
"  ~                                                                             "
"  ~                                                                             "
"  ~                                                                             "
"  ~                                                                             "
"  ~                                                                             "
"  ~                                                                             "
"  ~                                                                             "
" INSERT  test.txt [+]  1:4                                                      "
"                                                                                "
