crates/tome-term/src/snapshots/tome__tests__render_cursor_movement.snap
---
source: crates/tome-term/src/main.rs
expression: terminal.backend()
---
"  1 Hello                                                                       "
"  2 World                                                                       "
"  ~                                                                             "
"  ~                                                                             "
"  ~                                                                             "
"  ~                                                                             "
"  ~                                                                             "
"  ~                                                                             "
" NORMAL  test.txt  2:3                                                          "
"                                                                                "
